Subdivision Surface modifier generates artifacts with Mean Crease=1 #58994

Closed
opened 2018-12-08 02:51:56 +01:00 by YAFU · 7 comments

System Information
Operating system: Kubuntu 18.04
Graphics card: GTX 960

Blender Version
Broken: 2.8 ( 0fe5a78983 )
Worked: 2.79b

Short description of error

I have no idea if this is a bug, something that has not yet been implemented or bad configuration on my part. The only thing I can say is that apparently old subsurf in 2.79b with similar configuration does not produce these artifacts. You note that artifacts disappear even when Mean Crease for selected edges in the .blend file is set to a value of 0.9999...
But if you enter 1 value, artifacts on edges appear.
SubSurf artifact.blend

Exact steps for others to reproduce the error
Open blend file and you see the outer edges of the selected object.

**System Information** Operating system: Kubuntu 18.04 Graphics card: GTX 960 **Blender Version** Broken: 2.8 ( 0fe5a789837 ) Worked: 2.79b **Short description of error** I have no idea if this is a bug, something that has not yet been implemented or bad configuration on my part. The only thing I can say is that apparently old subsurf in 2.79b with similar configuration does not produce these artifacts. You note that artifacts disappear even when Mean Crease for selected edges in the .blend file is set to a value of 0.9999... But if you enter 1 value, artifacts on edges appear. [SubSurf artifact.blend](https://archive.blender.org/developer/F5878169/SubSurf_artifact.blend) **Exact steps for others to reproduce the error** Open blend file and you see the outer edges of the selected object.
Author

Added subscriber: @YAFU

Added subscriber: @YAFU

#60750 was marked as duplicate of this issue

#60750 was marked as duplicate of this issue

Added subscriber: @Alrob

Added subscriber: @Alrob
Sergey Sharybin was assigned by Sebastian Parborg 2018-12-10 14:42:06 +01:00

Added subscribers: @WilliamReynish, @Sergey

Added subscribers: @WilliamReynish, @Sergey

IMO the simple example of a subdivided cube with creased edges shows the issue better:

Screenshot 2019-01-22 at 16.26.50.png

OpenSubdiv_Normals_bug_cube.blend

IMO the simple example of a subdivided cube with creased edges shows the issue better: ![Screenshot 2019-01-22 at 16.26.50.png](https://archive.blender.org/developer/F6368553/Screenshot_2019-01-22_at_16.26.50.png) [OpenSubdiv_Normals_bug_cube.blend](https://archive.blender.org/developer/F6368557/OpenSubdiv_Normals_bug_cube.blend)

This issue was referenced by e6ad4ec3fc

This issue was referenced by e6ad4ec3fc7db82062e93d49395275ac326f2a37

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#58994
No description provided.