Fix T58994: Subdivision modifier generates artifacts with crease=1

The issue was caused by the lack of averaging of normals for
vertices which are on the ptex face boundaries.